--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,22 +16,23 @@
             android:name=".activities.OnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.AllRestaurantsActivity"
-            android:exported="false" />
-        <activity
             android:name=".activities.LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity
             android:name=".activities.MainActivity"
-            android:exported="false" />
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".activities.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.SpecificRestaurantActivity"
             android:exported="false" />
     </application>
 
