--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,23 +16,33 @@
             android:name=".activities.OnboardingActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.AllRestaurantsActivity"
-            android:exported="false" />
-        <activity
             android:name=".activities.LoginActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".activities.MainActivity"
-            android:exported="false" />
         <activity
             android:name=".activities.RegisterActivity"
             android:exported="false" />
+        <activity
+            android:name=".activities.UserReviewsActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".activities.EditProfileActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".activities.ChangePasswordActivity"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
