--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.RateEat"
         tools:targetApi="31">
         <activity
-            android:name=".activities.OnboardingActivity"
+            android:name=".activities.AddReview"
             android:exported="false" />
         <activity
-            android:name=".activities.AllRestaurantsActivity"
+            android:name=".activities.OnboardingActivity"
             android:exported="false" />
         <activity
             android:name=".activities.LoginActivity"
